// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load valid references 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "name": "package-name",
  "package": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "project": undefined,
  "references": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "a",
      "optional": true,
      "version": "1.0",
    },
  ],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads and parses manifest 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "dictionary",
      "registry": "vba-blocks",
      "version": "1.4.1",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "web",
      "tag": "v4.1.3",
    },
  ],
  "dir": ".",
  "name": "testing",
  "package": Object {
    "authors": Array [
      "Tim Hall <tim.hall.engr@gmail.com>",
    ],
    "name": "testing",
    "publish": true,
    "version": "0.1.0",
  },
  "project": undefined,
  "references": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "Scripting",
      "optional": true,
      "version": "1.0",
    },
  ],
  "src": Array [
    Object {
      "name": "a",
      "optional": false,
      "path": "src/a.bas",
    },
    Object {
      "name": "b",
      "optional": true,
      "path": "src/b.cls",
    },
    Object {
      "name": "c",
      "optional": false,
      "path": "src/c.bas",
    },
  ],
  "targets": Array [
    Object {
      "filename": "testing.xlsm",
      "name": "testing",
      "path": "targets/xlsm",
      "type": "xlsm",
    },
  ],
  "version": "0.1.0",
}
`;

exports[`loads valid dependencies 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "a",
      "registry": "vba-blocks",
      "version": "^1.0.0",
    },
    Object {
      "name": "b",
      "registry": "vba-blocks",
      "version": "^2.0.0",
    },
    Object {
      "name": "c",
      "path": "packages/c",
    },
    Object {
      "branch": "master",
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "d",
    },
    Object {
      "branch": "next",
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "e",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "f",
      "tag": "v1.0.0",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "g",
      "rev": "a1b2c3d4",
    },
  ],
  "dir": ".",
  "name": "package-name",
  "package": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "project": undefined,
  "references": Array [],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid package metadata 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "name": "package-name",
  "package": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "project": undefined,
  "references": Array [],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid sources 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "name": "package-name",
  "package": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "project": undefined,
  "references": Array [],
  "src": Array [
    Object {
      "name": "A",
      "optional": false,
      "path": "src/a.bas",
    },
    Object {
      "name": "B",
      "optional": false,
      "path": "src/b.cls",
    },
    Object {
      "name": "C",
      "optional": true,
      "path": "src/c.frm",
    },
  ],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid targets 1`] = `
Object {
  "dependencies": Array [],
  "dir": ".",
  "name": "package-name",
  "package": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "project": undefined,
  "references": Array [],
  "src": Array [],
  "targets": Array [
    Object {
      "filename": "package-name.xlsm",
      "name": "package-name",
      "path": "targets/xlsm",
      "type": "xlsm",
    },
    Object {
      "filename": "addin.xlam",
      "name": "addin",
      "path": "targets/xlam",
      "type": "xlam",
    },
  ],
  "version": "1.0.0",
}
`;

exports[`throws for invalid syntax 1`] = `
[Error: vba-blocks.toml is invalid:

Syntax Error: C:\\dev\\vba-blocks\\tests\\__fixtures__\\manifests\\invalid-syntax\\vba-block.toml (2:5)

Expected "=", [ \\t] or [A-Za-z0-9_\\-] but ":" found.]
`;
